Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextNumberField.quorum
class Main
    number v = 5.0
    action Main
        Test(v)
    end

    action Test(text var)
    end
end
